# ai-forge

./: .gitignore  pom.xml
.agents/workflows/: aiforge.md
.cursor/rules/: aiforge.mdc
.trae/rules/: aiforge-project-role.md
ai-forge-agent/: .gitignore  README.md  main.py  pyproject.toml  recover_dlq.py  test_main.http
ai-forge-agent/agents/: base_agent.py  clean_agent.py  customer_agent.py  delivery_agent.py  draft_agent.py  home_chat_agent.py  planning_agent.py  rag_agent.py  summary_agent.py
ai-forge-agent/app/: api.py  config.py  dependencies.py  exceptions.py  schemas.py
ai-forge-agent/app/api/: __init__.py  chat.py  clean.py  delivery.py  draft.py  knowledge.py  plan.py  rag.py  summary.py
ai-forge-agent/app/schemas/: __init__.py  base.py  chat.py  clean.py  delivery.py  draft.py  knowledge.py  plan.py  rag.py  summary.py
ai-forge-agent/app/services/: tools_registry.py
ai-forge-agent/app/tools/: __init__.py  save_draft.py  tool_executor.py  web_search.py
ai-forge-agent/models/: __init__.py  database.py
ai-forge-agent/scratch/: es_query.json
ai-forge-agent/services/: embedding.py  llm_provider.py  rabbitmq_consumer.py  session_memory.py  vector_store.py
aiforge-ai/: pom.xml
aiforge-common/: pom.xml
aiforge-server/: ARCHITECTURE.md  README.md  pom.xml
aiforge-server/aiforge-ai/: pom.xml
aiforge-server/aiforge-biz/: pom.xml
aiforge-server/aiforge-common/: pom.xml
aiforge-server/aiforge-web/: pom.xml
aiforge-system/: pom.xml
aiforge-ui/: .env.development  .env.production  ARCHITECTURE.md  README.md  env.d.ts  package-lock.json  package.json  vite.config.ts
aiforge-ui/src/: App.vue  main.ts
aiforge-ui/src/api/: ai.ts  article.ts  auth.ts  file.ts  search.ts
aiforge-ui/src/assets/: main.css
aiforge-ui/src/router/: index.ts
aiforge-ui/src/stores/: auth.ts
aiforge-ui/src/types/: ai.ts  article.ts  auth.ts  common.ts  file.ts
aiforge-ui/src/utils/: request.ts  sse.ts
aiforge-ui/src/views/: HomeView.vue  (+1 more)
sql/: aiforge.sql  biz_article .sql  sys_file.sql  sys_oper_log.sql  sys_user.sql
(+152 files in other folders)
