[project]
name = "ai-forge-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.14.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
