[project]
name = "ai-forge-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "cryptography>=46.0.7",
    "elasticsearch>=8.19.3",
    "fastapi>=0.135.3",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "pydantic-settings>=2.14.0",
    "pymysql>=1.1.2",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
