[project]
name = "ai-forge-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.6.2",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "cryptography>=46.0.7",
    "duckduckgo-search>=8.1.1",
    "elasticsearch>=8.19.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "pydantic-settings>=2.14.0",
    "pymysql>=1.1.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
